# resp-result

./: Cargo.toml
axum-resp-result-macro/: Cargo.toml
axum-resp-result-macro/src/: lib.rs
axum-resp-result-macro/src/derive_resp_error/: mod.rs
axum-resp-result-macro/src/derive_resp_error/codegen/: mod.rs
axum-resp-result-macro/src/derive_resp_error/input/: mod.rs  variant_info.rs
axum-resp-result-macro/src/derive_resp_error/structure/: http_code.rs
axum-resp-result-macro/src/proc_resp_result/: function_loader.rs
examples/: axum.rs  expand.rs
src/: expect_ext.rs  lib.rs  owner_leak.rs
src/config/: mod.rs  resp.rs  serde.rs  status_signed.rs
src/convert/: mod.rs
src/convert/from_request/: axum.rs  mod.rs
src/extra_flag/: effect.rs  flag_wrap.rs  flags.rs
src/resp_body/: mod.rs  serde_data.rs
src/resp_error/: mod.rs
src/resp_result/: mod.rs  serde.rs  try_macro.rs  try_op.rs
src/resp_result/to_response/: axum.rs  mod.rs
