workspace = { members = ["axum-resp-result-macro"] }

[package]
name = "axum-resp-result"
version = "0.8.0"
edition = "2021"
authors = ["FrozenString<frozenstringstable@gmail.com>"]
description = "Help Struct For Axum Response"
homepage = "https://github.com/Goodjooy/resp-result"
documentation = "https://docs.rs/axum-resp-result"
license = "MIT"
readme = "Readme.md"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[[example]]
name = "axum"
required-features = ["trace", "extra-error"]

[[example]]
name = "expand"
required-features = ["trace"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
log = ["trace", "tracing?/log"]
trace = ["dep:tracing", "dep:tracing-unwrap"]
extra-error = ["axum-resp-result-macro/extra-error"]
nightly_try_v2 = []

[dependencies]
serde_json = "1"
http = "1"
once_cell = "1"
thiserror = "2.0.12"
tracing = { version = "0.1.37", optional = true }
tracing-unwrap = { version = "1.0.1", features = [
    "log-location",
], optional = true }
axum-resp-result-macro = { path = "./axum-resp-result-macro" }

[dependencies.serde]
version = "1"
features = ["derive"]

[dependencies.axum]
version = "0.8"

[dependencies.mime]
version = "0.3"

[dev-dependencies]
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing-subscriber = { version = "0.3.16", features = [
    "fmt",
    "registry",
    "env-filter",
] }
tower-http = { version = "0.6.6", features = ["trace"] }
thiserror = "2.0.12"
